--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@chakra-ui/core": "0.8.0",
     "@emotion/core": "10.0.28",
     "@emotion/styled": "10.0.27",
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@mapbox/rehype-prism": "0.4.0",
     "@mdx-js/loader": "1.5.8",
     "@mdx-js/react": "1.5.8",
@@ -44,6 +45,8 @@
     "big.js": "5.2.2",
     "comma-number": "2.0.1",
     "date-fns": "2.13.0",
+    "devicon": "^2.2.0",
+    "devicons": "^1.8.0",
     "emotion-theming": "10.0.27",
     "fathom-client": "3.0.0",
     "firebase": "7.14.4",
