--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "firebase-admin": "8.12.1",
     "googleapis": "48.0.0",
     "mdx-prism": "0.3.1",
-    "next": "9.4.1",
+    "next": "^9.4.1",
     "next-google-fonts": "1.1.0",
     "next-mdx-enhanced": "3.0.0",
     "next-seo": "4.5.0",
